--- a/Code/data_preprocessing.ipynb
+++ b/Code/data_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "186ad2ed",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "2dc5bd75",
    "metadata": {},
    "outputs": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "80258489",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "26521bf8",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "b0399f9f",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "827b14df",
    "metadata": {},
    "outputs": [
@@ -194,8 +194,8 @@
    ],
    "source": [
     "# Test preprocessing on sample images\n",
-    "sample_normal = normal_files[0]  # Use first normal image from your list\n",
-    "sample_pneumonia = pneumonia_files[0]  # Use first pneumonia image from your list\n",
+    "sample_normal = normal_files[0]  # Use first normal image from list\n",
+    "sample_pneumonia = pneumonia_files[0]  # Use first pneumonia image from list\n",
     "\n",
     "print(f\"Testing with:\")\n",
     "print(f\"Normal: {sample_normal}\")\n",
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "cfff8da7",
    "metadata": {},
    "outputs": [
@@ -262,14 +262,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "e40a405e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define complete preprocessing pipeline with augmentation\n",
+    "# Preprocessing pipeline with augmentation\n",
     "def get_transforms():\n",
-    "    # Returns train and validation transforms\n",
+    "    # Returns train and val transforms\n",
     "    \n",
     "    # Training transforms (with augmentation)\n",
     "    train_transform = transforms.Compose([\n",
@@ -280,7 +280,7 @@
     "        transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])  # ImageNet stats\n",
     "    ])\n",
     "    \n",
-    "    # Validation transforms (no augmentation)\n",
+    "    # Validation transforms (no augmentation to provide consistent repeatable evaluation)\n",
     "    val_transform = transforms.Compose([\n",
     "        transforms.Lambda(lambda x: preprocess_image(x) if isinstance(x, str) else x),\n",
     "        transforms.ToTensor(),\n",
@@ -289,8 +289,193 @@
     "    \n",
     "    return train_transform, val_transform\n",
     "\n",
-    "train_transforms, val_transforms = get_transforms()\n",
-    "print(\"Transform pipelines created successfully\")"
+    "train_transforms, val_transforms = get_transforms()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4c9b411",
+   "metadata": {},
+   "source": [
+    "**PyTorch Dataset Class**\n",
+    "\n",
+    "Used to more effectively feed data into the models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "0f444fbf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "3dfd4e90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Custom dataset for chest X-ray images\n",
+    "normal_files: List of file paths to normal X-ray images\n",
+    "pneumonia_files: List of file paths to pneumonia X-ray images  \n",
+    "transform: PyTorch transforms to apply to images\n",
+    "\"\"\"\n",
+    "\n",
+    "class ChestXrayDataset(Dataset):\n",
+    "    \n",
+    "    def __init__(self, normal_files, pneumonia_files, transform=None):\n",
+    "    \n",
+    "        # Combine file paths and create corresponding labels\n",
+    "        # Creates dataset that is unified\n",
+    "        self.image_paths = normal_files + pneumonia_files\n",
+    "        self.labels = [0] * len(normal_files) + [1] * len(pneumonia_files)  # 0=Normal, 1=Pneumonia\n",
+    "        self.transform = transform\n",
+    "    \n",
+    "    def __len__(self):\n",
+    "        # Return total number of images\n",
+    "        return len(self.image_paths)\n",
+    "    \n",
+    "    def __getitem__(self, idx):\n",
+    "        # Get a single image and its label\n",
+    "        image_path = self.image_paths[idx]\n",
+    "        label = self.labels[idx]\n",
+    "        \n",
+    "        # Load and preprocess image\n",
+    "        image = preprocess_image(image_path)\n",
+    "        \n",
+    "        # Apply transforms if specified\n",
+    "        if self.transform:\n",
+    "            image = self.transform(image)\n",
+    "        \n",
+    "        return image, label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "198f0eeb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train dataset size: 4185\n",
+      "Validation dataset size: 1047\n",
+      "\n",
+      "Sample image shape: torch.Size([3, 224, 224])\n",
+      "Sample label: 0 (Normal)\n",
+      "Image data type: torch.float32\n",
+      "Image value range: [-2.049, 1.803]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create datasets using train/val splits\n",
+    "train_dataset = ChestXrayDataset(normal_train, pneumonia_train, transform=train_transforms)\n",
+    "val_dataset = ChestXrayDataset(normal_val, pneumonia_val, transform=val_transforms)\n",
+    "\n",
+    "print(f\"Train dataset size: {len(train_dataset)}\")\n",
+    "print(f\"Validation dataset size: {len(val_dataset)}\")\n",
+    "\n",
+    "# Test loading a single sample\n",
+    "sample_image, sample_label = train_dataset[0]\n",
+    "print(f\"\\nSample image shape: {sample_image.shape}\")\n",
+    "print(f\"Sample label: {sample_label} ({'Pneumonia' if sample_label == 1 else 'Normal'})\")\n",
+    "print(f\"Image data type: {sample_image.dtype}\")\n",
+    "print(f\"Image value range: [{sample_image.min():.3f}, {sample_image.max():.3f}]\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "45d192d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train batches: 131\n",
+      "Validation batches: 33\n",
+      "\n",
+      "Batch shape: torch.Size([32, 3, 224, 224])\n",
+      "Batch labels shape: torch.Size([32])\n",
+      "Labels in batch: tensor([1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 0, 1,\n",
+      "        1, 1, 1, 1, 1, 1, 1, 1])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create data loaders for batch processing\n",
+    "batch_size = 32\n",
+    "\n",
+    "train_loader = DataLoader(\n",
+    "    train_dataset, \n",
+    "    batch_size=batch_size, \n",
+    "    shuffle=True,  # Shuffle training data\n",
+    "    num_workers=0  # Set to 0 for Windows compatibility\n",
+    ")\n",
+    "\n",
+    "val_loader = DataLoader(\n",
+    "    val_dataset, \n",
+    "    batch_size=batch_size, \n",
+    "    shuffle=False,  # Don't shuffle validation data\n",
+    "    num_workers=0\n",
+    ")\n",
+    "\n",
+    "print(f\"Train batches: {len(train_loader)}\")\n",
+    "print(f\"Validation batches: {len(val_loader)}\")\n",
+    "\n",
+    "# Test batch loading\n",
+    "batch_images, batch_labels = next(iter(train_loader))\n",
+    "print(f\"\\nBatch shape: {batch_images.shape}\")\n",
+    "print(f\"Batch labels shape: {batch_labels.shape}\")\n",
+    "print(f\"Labels in batch: {batch_labels}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0f2425e",
+   "metadata": {},
+   "source": [
+    "**Creating toy dataset**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84a7ffc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create 500-image subset for testing\n",
+    "def create_subset(normal_files, pneumonia_files, total_size=500):\n",
+    "    \n",
+    "    # Calculate proportional sizes (roughly 25% normal, 75% pneumonia)\n",
+    "    normal_subset_size = int(total_size * 0.25)  # ~125 images\n",
+    "    pneumonia_subset_size = total_size - normal_subset_size  # ~375 images\n",
+    "    \n",
+    "    normal_subset = normal_files[:normal_subset_size]\n",
+    "    pneumonia_subset = pneumonia_files[:pneumonia_subset_size]\n",
+    "    \n",
+    "    return normal_subset, pneumonia_subset\n",
+    "\n",
+    "# Create 500-image subset\n",
+    "normal_subset, pneumonia_subset = create_subset(normal_train, pneumonia_train, 500)\n",
+    "subset_dataset = ChestXrayDataset(normal_subset, pneumonia_subset, transform=train_transforms)\n",
+    "subset_loader = DataLoader(subset_dataset, batch_size=32, shuffle=True, num_workers=0)\n",
+    "\n",
+    "print(f\"Subset dataset size: {len(subset_dataset)}\")\n",
+    "print(f\"Normal images: {len(normal_subset)}\")\n",
+    "print(f\"Pneumonia images: {len(pneumonia_subset)}\")\n",
+    "print(f\"Subset batches: {len(subset_loader)}\")"
    ]
   }
  ],
