Created toy dataset

--- a/Code/data_preprocessing.ipynb
+++ b/Code/data_preprocessing.ipynb
@@ -458,9 +458,9 @@
     "# Create 500-image subset for testing\n",
     "def create_subset(normal_files, pneumonia_files, total_size=500):\n",
     "    \n",
-    "    # Calculate proportional sizes (roughly 25% normal, 75% pneumonia)\n",
-    "    normal_subset_size = int(total_size * 0.25)  # ~125 images\n",
-    "    pneumonia_subset_size = total_size - normal_subset_size  # ~375 images\n",
+    "    # Calc proportional sizes (25% normal, 75% pneumonia)\n",
+    "    normal_subset_size = int(total_size * 0.25)  \n",
+    "    pneumonia_subset_size = total_size - normal_subset_size\n",
     "    \n",
     "    normal_subset = normal_files[:normal_subset_size]\n",
     "    pneumonia_subset = pneumonia_files[:pneumonia_subset_size]\n",
