Loaded pre-trained models and created train_model function

--- a/Code/data_preprocessing.ipynb
+++ b/Code/data_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "186ad2ed",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "2dc5bd75",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,7 @@
     }
    ],
    "source": [
-    "# Validation set was deemed too small\n",
+    "# Validation set is too small\n",
     "# I will combine og train + val, then create proper 80/20 split\n",
     "\n",
     "def create_splits():\n",
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "80258489",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "26521bf8",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "b0399f9f",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "827b14df",
    "metadata": {},
    "outputs": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "id": "cfff8da7",
    "metadata": {},
    "outputs": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "e40a405e",
    "metadata": {},
    "outputs": [],
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "id": "0f444fbf",
    "metadata": {},
    "outputs": [],
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "id": "3dfd4e90",
    "metadata": {},
    "outputs": [],
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "id": "198f0eeb",
    "metadata": {},
    "outputs": [
@@ -372,7 +372,7 @@
       "Sample image shape: torch.Size([3, 224, 224])\n",
       "Sample label: 0 (Normal)\n",
       "Image data type: torch.float32\n",
-      "Image value range: [-2.049, 1.803]\n"
+      "Image value range: [-2.015, 2.431]\n"
      ]
     }
    ],
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "id": "45d192d6",
    "metadata": {},
    "outputs": [
@@ -407,8 +407,8 @@
       "\n",
       "Batch shape: torch.Size([32, 3, 224, 224])\n",
       "Batch labels shape: torch.Size([32])\n",
-      "Labels in batch: tensor([1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 0, 1,\n",
-      "        1, 1, 1, 1, 1, 1, 1, 1])\n"
+      "Labels in batch: tensor([1, 1, 0, 1, 0, 1, 1, 0, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1,\n",
+      "        1, 1, 1, 1, 1, 1, 0, 1])\n"
      ]
     }
    ],
@@ -450,10 +450,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "84a7ffc1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Subset dataset size: 500\n",
+      "Normal images: 125\n",
+      "Pneumonia images: 375\n",
+      "Subset batches: 16\n"
+     ]
+    }
+   ],
    "source": [
     "# Create 500-image subset for testing\n",
     "def create_subset(normal_files, pneumonia_files, total_size=500):\n",
