--- a/Code/model_implementation.ipynb
+++ b/Code/model_implementation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "d8793953",
    "metadata": {},
    "outputs": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "e9e0f5a8",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "b51d7ea2",
    "metadata": {},
    "outputs": [],
@@ -105,12 +105,14 @@
     "    optimiser = optim.Adam(model.parameters(), lr=learning_rate)\n",
     "    \n",
     "    # Store training metrics over time\n",
-    "    history = {'train_loss': [], 'val_loss': [], 'val_acc': []}\n",
+    "    history = {'train_loss': [], 'val_loss': [], 'train_acc': [], 'val_acc': []}\n",
     "    \n",
     "    for epoch in range(num_epochs):\n",
     "        # Training phase\n",
     "        model.train()\n",
     "        train_loss = 0.0\n",
+    "        train_correct = 0\n",
+    "        train_total = 0\n",
     "        \n",
     "        # Process each batch of training data\n",
     "        for batch_idx, (images, labels) in enumerate(train_loader):\n",
@@ -118,15 +120,32 @@
     "            images, labels = images.to(device), labels.to(device)\n",
     "            \n",
     "            optimiser.zero_grad()\n",
-    "            outputs = model(images) # Forward pass\n",
+    "\n",
+    "            if hasattr(model, 'classifier') and 'ViT' in str(type(model)):\n",
+    "                # ViT returns ImageClassifierOutput, need to extract logits\n",
+    "                outputs = model(images).logits\n",
+    "                \n",
+    "            else:\n",
+    "                # ResNet returns tensor directly\n",
+    "                outputs = model(images)\n",
+    "\n",
     "            loss = criterion(outputs, labels) # Calc loss between predictions and true labels\n",
     "            loss.backward() # Backward pass (calc gradients)\n",
     "            optimiser.step() # Update model weights based on gradients\n",
     "            \n",
     "            train_loss += loss.item()\n",
+    "\n",
+    "            # Calc training accuracy\n",
+    "            _, predicted = torch.max(outputs, 1)\n",
+    "            train_total += labels.size(0)\n",
+    "            train_correct += (predicted == labels).sum().item()\n",
     "            \n",
     "            if batch_idx % 5 == 0:  # Print every 5 batches\n",
     "                print(f'Epoch {epoch+1}/{num_epochs}, Batch {batch_idx}/{len(train_loader)}, Loss: {loss.item():.4f}')\n",
+    "\n",
+    "        \n",
+    "        # Calculate training accuracy for this epoch\n",
+    "        train_acc = 100 * train_correct / train_total\n",
     "        \n",
     "        # Validation phase\n",
     "        model.eval()\n",
@@ -138,7 +157,16 @@
     "        with torch.no_grad():\n",
     "            for images, labels in val_loader:\n",
     "                images, labels = images.to(device), labels.to(device)\n",
-    "                outputs = model(images)\n",
+    "\n",
+    "                if hasattr(model, 'classifier') and 'ViT' in str(type(model)):\n",
+    "                    # ViT returns ImageClassifierOutput, need to extract logits\n",
+    "                    outputs = model(images).logits\n",
+    "\n",
+    "                    \n",
+    "                else:\n",
+    "                    # ResNet returns tensor directly\n",
+    "                    outputs = model(images)\n",
+    "\n",
     "                loss = criterion(outputs, labels)\n",
     "                val_loss += loss.item()\n",
     "                \n",
@@ -154,20 +182,99 @@
     "        \n",
     "        history['train_loss'].append(train_loss)\n",
     "        history['val_loss'].append(val_loss)\n",
+    "        history['train_acc'].append(train_acc)\n",
     "        history['val_acc'].append(val_acc)\n",
     "        \n",
-    "        print(f'Epoch {epoch+1}: Train Loss: {train_loss:.4f}, Val Loss: {val_loss:.4f}, Val Acc: {val_acc:.2f}%')\n",
+    "        print(f'Epoch {epoch+1}: Train Loss: {train_loss:.4f}, Train Acc: {train_acc:.2f}%, Val Loss: {val_loss:.4f}, Val Acc: {val_acc:.2f}%')\n",
     "    \n",
     "    return history"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "45bfec17",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading chest X-ray data...\n",
+      "Training samples: 4185\n",
+      "Validation samples: 1047\n",
+      "Subset samples: 500\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Import\n",
+    "from data_utils import create_splits, get_train_val_splits, get_transforms\n",
+    "from dataset import create_data_loaders, create_subset_loader\n",
+    "\n",
+    "# Load and split your data\n",
+    "print(\"Loading chest X-ray data...\")\n",
+    "normal_files, pneumonia_files = create_splits()\n",
+    "normal_train, normal_val, pneumonia_train, pneumonia_val = get_train_val_splits(normal_files, pneumonia_files)\n",
+    "\n",
+    "# Get transforms\n",
+    "train_transform, val_transform = get_transforms()\n",
+    "\n",
+    "# Create data loaders\n",
+    "train_loader, val_loader = create_data_loaders(\n",
+    "    normal_train, normal_val, pneumonia_train, pneumonia_val,\n",
+    "    train_transform, val_transform, batch_size=32\n",
+    ")\n",
+    "\n",
+    "# Create 500-image subset for testing\n",
+    "subset_loader = create_subset_loader(normal_train, pneumonia_train, train_transform)\n",
+    "\n",
+    "print(f\"Training samples: {len(normal_train) + len(pneumonia_train)}\")\n",
+    "print(f\"Validation samples: {len(normal_val) + len(pneumonia_val)}\")\n",
+    "print(f\"Subset samples: {len(subset_loader.dataset)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "3e9995f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training ResNet-50 on 500-image subset\n",
+      "Epoch 1/2, Batch 0/16, Loss: 0.0500\n",
+      "Epoch 1/2, Batch 5/16, Loss: 0.0123\n",
+      "Epoch 1/2, Batch 10/16, Loss: 0.0089\n",
+      "Epoch 1/2, Batch 15/16, Loss: 0.0019\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'train_acc'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[22]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Test training on small subset\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mTraining ResNet-50 on 500-image subset\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m resnet_history = \u001b[43mtrain_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresnet\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msubset_loader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msubset_loader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_epochs\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlearning_rate\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m1e-4\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      5\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33mTraining ViT on 500-image subset\u001b[39m\u001b[33m\"\u001b[39m) \n\u001b[32m      6\u001b[39m vit_history = train_model(vit, subset_loader, subset_loader, num_epochs=\u001b[32m2\u001b[39m, learning_rate=\u001b[32m1e-4\u001b[39m)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[20]\u001b[39m\u001b[32m, line 87\u001b[39m, in \u001b[36mtrain_model\u001b[39m\u001b[34m(model, train_loader, val_loader, num_epochs, learning_rate)\u001b[39m\n\u001b[32m     85\u001b[39m history[\u001b[33m'\u001b[39m\u001b[33mtrain_loss\u001b[39m\u001b[33m'\u001b[39m].append(train_loss)\n\u001b[32m     86\u001b[39m history[\u001b[33m'\u001b[39m\u001b[33mval_loss\u001b[39m\u001b[33m'\u001b[39m].append(val_loss)\n\u001b[32m---> \u001b[39m\u001b[32m87\u001b[39m \u001b[43mhistory\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mtrain_acc\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m.append(train_acc)\n\u001b[32m     88\u001b[39m history[\u001b[33m'\u001b[39m\u001b[33mval_acc\u001b[39m\u001b[33m'\u001b[39m].append(val_acc)\n\u001b[32m     90\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33mEpoch \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mepoch+\u001b[32m1\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m: Train Loss: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtrain_loss\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m, Train Acc: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtrain_acc\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m.2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m%, Val Loss: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mval_loss\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m, Val Acc: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mval_acc\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m.2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m%\u001b[39m\u001b[33m'\u001b[39m)\n",
+      "\u001b[31mKeyError\u001b[39m: 'train_acc'"
+     ]
+    }
+   ],
+   "source": [
+    "# Test training on small subset\n",
+    "print(\"Training ResNet-50 on 500-image subset\")\n",
+    "resnet_history = train_model(resnet, subset_loader, subset_loader, num_epochs=2, learning_rate=1e-4)\n",
+    "\n",
+    "print(\"\\nTraining ViT on 500-image subset\") \n",
+    "vit_history = train_model(vit, subset_loader, subset_loader, num_epochs=2, learning_rate=1e-4)\n",
+    "\n",
+    "print(f\"ResNet final validation accuracy: {resnet_history['val_acc'][-1]:.2f}%\")\n",
+    "print(f\"ViT final validation accuracy: {vit_history['val_acc'][-1]:.2f}%\")"
+   ]
   }
  ],
  "metadata": {
