Scaled to the entire dataset training on whole dataset

--- a/Code/model_implementation.ipynb
+++ b/Code/model_implementation.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "b51d7ea2",
    "metadata": {},
    "outputs": [],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "id": "45bfec17",
    "metadata": {},
    "outputs": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "id": "3e9995f0",
    "metadata": {},
    "outputs": [
@@ -245,22 +245,30 @@
      "output_type": "stream",
      "text": [
       "Training ResNet-50 on 500-image subset\n",
-      "Epoch 1/2, Batch 0/16, Loss: 0.0500\n",
-      "Epoch 1/2, Batch 5/16, Loss: 0.0123\n",
-      "Epoch 1/2, Batch 10/16, Loss: 0.0089\n",
-      "Epoch 1/2, Batch 15/16, Loss: 0.0019\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'train_acc'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[22]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Test training on small subset\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mTraining ResNet-50 on 500-image subset\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m resnet_history = \u001b[43mtrain_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresnet\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msubset_loader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msubset_loader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_epochs\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlearning_rate\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m1e-4\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      5\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33mTraining ViT on 500-image subset\u001b[39m\u001b[33m\"\u001b[39m) \n\u001b[32m      6\u001b[39m vit_history = train_model(vit, subset_loader, subset_loader, num_epochs=\u001b[32m2\u001b[39m, learning_rate=\u001b[32m1e-4\u001b[39m)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[20]\u001b[39m\u001b[32m, line 87\u001b[39m, in \u001b[36mtrain_model\u001b[39m\u001b[34m(model, train_loader, val_loader, num_epochs, learning_rate)\u001b[39m\n\u001b[32m     85\u001b[39m history[\u001b[33m'\u001b[39m\u001b[33mtrain_loss\u001b[39m\u001b[33m'\u001b[39m].append(train_loss)\n\u001b[32m     86\u001b[39m history[\u001b[33m'\u001b[39m\u001b[33mval_loss\u001b[39m\u001b[33m'\u001b[39m].append(val_loss)\n\u001b[32m---> \u001b[39m\u001b[32m87\u001b[39m \u001b[43mhistory\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mtrain_acc\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m.append(train_acc)\n\u001b[32m     88\u001b[39m history[\u001b[33m'\u001b[39m\u001b[33mval_acc\u001b[39m\u001b[33m'\u001b[39m].append(val_acc)\n\u001b[32m     90\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33mEpoch \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mepoch+\u001b[32m1\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m: Train Loss: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtrain_loss\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m, Train Acc: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtrain_acc\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m.2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m%, Val Loss: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mval_loss\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m, Val Acc: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mval_acc\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m.2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m%\u001b[39m\u001b[33m'\u001b[39m)\n",
-      "\u001b[31mKeyError\u001b[39m: 'train_acc'"
+      "Epoch 1/2, Batch 0/16, Loss: 0.0087\n",
+      "Epoch 1/2, Batch 5/16, Loss: 0.0101\n",
+      "Epoch 1/2, Batch 10/16, Loss: 0.0111\n",
+      "Epoch 1/2, Batch 15/16, Loss: 0.0101\n",
+      "Epoch 1: Train Loss: 0.0420, Train Acc: 98.00%, Val Loss: 0.0188, Val Acc: 99.40%\n",
+      "Epoch 2/2, Batch 0/16, Loss: 0.0380\n",
+      "Epoch 2/2, Batch 5/16, Loss: 0.0112\n",
+      "Epoch 2/2, Batch 10/16, Loss: 0.7080\n",
+      "Epoch 2/2, Batch 15/16, Loss: 0.1884\n",
+      "Epoch 2: Train Loss: 0.0859, Train Acc: 97.80%, Val Loss: 0.0174, Val Acc: 99.00%\n",
+      "\n",
+      "Training ViT on 500-image subset\n",
+      "Epoch 1/2, Batch 0/16, Loss: 0.0787\n",
+      "Epoch 1/2, Batch 5/16, Loss: 0.2648\n",
+      "Epoch 1/2, Batch 10/16, Loss: 0.1287\n",
+      "Epoch 1/2, Batch 15/16, Loss: 0.1220\n",
+      "Epoch 1: Train Loss: 0.2563, Train Acc: 91.00%, Val Loss: 0.1254, Val Acc: 95.60%\n",
+      "Epoch 2/2, Batch 0/16, Loss: 0.3019\n",
+      "Epoch 2/2, Batch 5/16, Loss: 0.1003\n",
+      "Epoch 2/2, Batch 10/16, Loss: 0.1749\n",
+      "Epoch 2/2, Batch 15/16, Loss: 0.0287\n",
+      "Epoch 2: Train Loss: 0.0893, Train Acc: 96.20%, Val Loss: 0.0574, Val Acc: 97.80%\n",
+      "ResNet final validation accuracy: 99.00%\n",
+      "ViT final validation accuracy: 97.80%\n"
      ]
     }
    ],
@@ -274,6 +282,79 @@
     "\n",
     "print(f\"ResNet final validation accuracy: {resnet_history['val_acc'][-1]:.2f}%\")\n",
     "print(f\"ViT final validation accuracy: {vit_history['val_acc'][-1]:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "e749ad77",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scaling to whole dataset\n",
+      "Whole training batches: 131\n",
+      "Whole validation batches: 33\n",
+      "Training samples: 4185\n",
+      "Validation samples: 1047\n",
+      "Batch shape: torch.Size([32, 3, 224, 224])\n",
+      "Labels shape: torch.Size([32])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create whole dataset with proper train/val splits\n",
+    "print(\"Scaling to whole dataset\")\n",
+    "\n",
+    "# Create whole data loaders (not using subset anymore)\n",
+    "whole_train_loader, whole_val_loader = create_data_loaders(\n",
+    "    normal_train, normal_val, pneumonia_train, pneumonia_val,\n",
+    "    train_transform, val_transform, batch_size=32\n",
+    ")\n",
+    "\n",
+    "print(f\"Whole training batches: {len(whole_train_loader)}\")\n",
+    "print(f\"Whole validation batches: {len(whole_val_loader)}\")\n",
+    "print(f\"Training samples: {len(whole_train_loader.dataset)}\")\n",
+    "print(f\"Validation samples: {len(whole_val_loader.dataset)}\")\n",
+    "\n",
+    "# Test one batch to ensure everything works\n",
+    "test_batch = next(iter(whole_train_loader))\n",
+    "print(f\"Batch shape: {test_batch[0].shape}\")\n",
+    "print(f\"Labels shape: {test_batch[1].shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98f6825a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train ResNet-50 on whole dataset\n",
+    "print(\"Training ResNet-50 on whole dataset...\")\n",
+    "resnet_whole_history = train_model(\n",
+    "    resnet, \n",
+    "    whole_train_loader, \n",
+    "    whole_val_loader, \n",
+    "    num_epochs=10,\n",
+    "    learning_rate=1e-4\n",
+    ")\n",
+    "\n",
+    "print(\"\\nTraining ViT on whole dataset...\")\n",
+    "vit_whole_history = train_model(\n",
+    "    vit, \n",
+    "    whole_train_loader, \n",
+    "    whole_val_loader, \n",
+    "    num_epochs=10,\n",
+    "    learning_rate=1e-4\n",
+    ")\n",
+    "\n",
+    "print(f\"ResNet final training accuracy: {resnet_whole_history['train_acc'][-1]:.2f}%\")\n",
+    "print(f\"ResNet final validation accuracy: {resnet_whole_history['val_acc'][-1]:.2f}%\")\n",
+    "print(f\"ViT final training accuracy: {vit_whole_history['train_acc'][-1]:.2f}%\")  \n",
+    "print(f\"ViT final validation accuracy: {vit_whole_history['val_acc'][-1]:.2f}%\")"
    ]
   }
  ],
